--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ scikit-learn = "^1.6.0"
 tensorflow = "^2.18.0"
 opencv-python = "^4.10.0.84"
 mtcnn = "^1.0.0"
+scipy = "^1.15.1"
+statsmodels = "^0.14.4"
+matplotlib = "^3.10.0"
 
 
 [tool.poetry.group.dev.dependencies]
